src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Integrated Healthcare Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Commit</fullName>
        </values>
        <values>
            <fullName>Consensus</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Pitching</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Membership Sales Process</fullName>
        <description>Membership</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Commit</fullName>
        </values>
        <values>
            <fullName>Consensus</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Pitching</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sponsorship Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Contracting</fullName>
        </values>
        <values>
            <fullName>Initial Meeting</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Post-Proposal Discussion</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accelerator_Stage_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerator Stage 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accelerator_Stage_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerator Stage 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <formula>Account.Owner.FirstName + &quot; &quot; + Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Specialty_Contacts__c</fullName>
        <description>The number of contacts related to the opportunity&apos;s account that match the qualification assigned to the the opportunity&apos;s owner as their specialty.</description>
        <inlineHelpText>The number of contacts related to the opportunity&apos;s account that match the qualification assigned to the the opportunity&apos;s owner as their specialty.</inlineHelpText>
        <label>Additional Specialty Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdjustedRevenue__c</fullName>
        <formula>TotalAmount__c *
(1 - IF(ISPICKVAL(BudgetFluctuation__c, &quot;0%&quot;), 0,
     IF(ISPICKVAL(BudgetFluctuation__c, &quot;10%&quot;), VALUE(&quot;.1&quot;),
     IF(ISPICKVAL(BudgetFluctuation__c, &quot;25%&quot;), VALUE(&quot;.25&quot;),
     IF(ISPICKVAL(BudgetFluctuation__c, &quot;50%&quot;), VALUE(&quot;.5&quot;), 0))))) *
Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgencyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Agency Contact)</relationshipLabel>
        <relationshipName>Opportunities1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountLikely__c</fullName>
        <label>Amount Likely</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrandContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Brand Contact)</relationshipLabel>
        <relationshipName>Opportunities2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetFluctuation__c</fullName>
        <label>Budget Fluctuation</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGM - Blood Glucose Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Polar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Thinner A-Fib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Thinner Post Procedure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer - Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer - Colon-Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer - Hematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer - Prostate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold/Flu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>digestive/ GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endo - other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epilepsy &amp; Seizures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erectile Dysfunction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eye care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLP-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Blood Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis - C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease - other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CompetitorSwitchout__c</fullName>
        <formula>TEXT(Account.CompetitorSwitchout__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Switchout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmedToInstalledWeekdays__c</fullName>
        <formula>CASE(MOD(CloseDate - DATE(1985,6,24),7), 
0 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DateInstalled__c - DateConfirmed__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((DateInstalled__c - CloseDate)/7)*5)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed to Installed (Weekdays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateConfirmed__c</fullName>
        <label>Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateInstalled__c</fullName>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateScheduled__c</fullName>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSinceClosed__c</fullName>
        <formula>IF(
OR(ISPICKVAL(StageName, &quot;Closed Won&quot;), ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
TODAY() - CloseDate,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceConfirmation__c</fullName>
        <formula>TODAY() - DateConfirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Confirmation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelayedConfirmationRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed Confirmation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelayedInstallationRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed Installation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedTotalNumberOfLocations__c</fullName>
        <label>Estimated Total Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExamRoomSpend__c</fullName>
        <label>Exam Room Spend</label>
        <summarizedField>OpportunityLineItem.TotalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductType__c</field>
            <operation>equals</operation>
            <value>Exam Room</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastAmountChangeDate__c</fullName>
        <label>Last Amount Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastAmountChange__c</fullName>
        <label>Last Amount Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeadCategory__c</fullName>
        <label>Lead Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics and Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LiveHandOff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Hand Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MountType__c</fullName>
        <label>Mount Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfProducts__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OnboardingSpecialist__c</fullName>
        <formula>Account.onboarding_specialist__r.FirstName + &quot; &quot; + Account.onboarding_specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onboarding Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_Number__c</fullName>
        <description>This field is being used on a Commission Report. Please do not delete without contacting Bogumil or Matt first.</description>
        <formula>Owner.EmployeeNumber</formula>
        <label>Owner Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Specialty__c</fullName>
        <description>This field is intended to be update in the background in an effort to determine the opportunity assigned owner&apos;s specialty for commission calculation purposes.</description>
        <globalPicklist>Specialty</globalPicklist>
        <label>Owner&apos;s Specialty</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <description>This field is intended to be update in the background in an effort to determine the opportunity assigned owner&apos;s membership team for commission calculation purposes.</description>
        <globalPicklist>Membership_Team</globalPicklist>
        <label>Owner Team</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidOn__c</fullName>
        <label>Paid On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductConfirmedDate__c</fullName>
        <label>Product Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductInstalledDate__c</fullName>
        <label>Product Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramEndDate2__c</fullName>
        <formula>ProgramStartDate2__c + (TotalNumberOfMonths__c * 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramEndDate__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramStartDate2__c</fullName>
        <label>Program Start Date</label>
        <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramStartDate__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchasingFunction__c</fullName>
        <label>Purchasing Function</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>Used to determine compensation bracket</description>
        <globalPicklist>Qualification_Type</globalPicklist>
        <label>Qualification Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>IF( AND(Accelerator_Stage_1__c == true, Accelerator_Stage_2__c == false), 
   &quot;Accelerator 1&quot;, 
       IF(AND(Accelerator_Stage_1__c == false, Accelerator_Stage_2__c == true),  
           &quot;Accelerator 2&quot;, 
                 &quot;Standard Rate&quot;))</formula>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaleToInstallExplanation__c</fullName>
        <label>Sale to Install Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesSubmissionDetails__c</fullName>
        <label>Sales Submission Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SignupToInstallDays__c</fullName>
        <formula>DateInstalled__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signup to Install (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignupToInstalledWeekdays__c</fullName>
        <formula>CASE(MOD( SoldDate__c - DATE(1985,6,24),7), 
0 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DateInstalled__c - CloseDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DateInstalled__c - SoldDate__c )/7)*5)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signup to Installed (Weekdays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignupToScheduledWeekdays__c</fullName>
        <formula>CASE(MOD( DateScheduled__c - DATE(1985,6,24),7), 
0 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DateScheduled__c - CloseDate ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((DateScheduled__c - CloseDate)/7)*5)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signup to Scheduled (Weekdays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SoldDate__c</fullName>
        <label>Product Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialty_Contacts_Bonus__c</fullName>
        <description>Commission bonus based on the count of contacts - 1 that have qualification matching the opportunity owner assigned specialty.</description>
        <inlineHelpText>Commission bonus based on the count of contacts - 1 that have qualification matching the opportunity owner assigned specialty.</inlineHelpText>
        <label>Specialty Contacts Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>OpportunityLineItem.TotalAmount__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfMonths__c</fullName>
        <description>The MAX number of months that any of the opportunity&apos;s products has.</description>
        <label>Total Number Of Months</label>
        <summarizedField>OpportunityLineItem.NumberOfMonths__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProductsCommission__c</fullName>
        <label>Total Products Commission</label>
        <summarizedField>OpportunityLineItem.CommissionAmount__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Commission__c</fullName>
        <formula>TotalProductsCommission__c +  Specialty_Contacts_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Commission is derived by adding products commission and specialty contacts bonus together.</inlineHelpText>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WaitingRoomSpend__c</fullName>
        <label>Waiting Room Spend</label>
        <summarizedField>OpportunityLineItem.TotalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductType__c</field>
            <operation>equals</operation>
            <value>Waiting Room</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF(DAY(CloseDate) &lt; 8, &apos;Week 1&apos;, IF(DAY(CloseDate) &lt; 15, &apos;Week 2&apos;, IF(DAY(CloseDate) &lt; 22, &apos;Week 3&apos;, &apos;Week 4&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllMOOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.IntegratedHealtchare</value>
        </filters>
        <label>All MO Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>All Open Opps</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My_Open_Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities2014</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>WaitingRoomSpend__c</columns>
        <columns>ExamRoomSpend__c</columns>
        <columns>AdjustedRevenue__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>2015</value>
        </filters>
        <label>My_Open_Opportunities Current Year</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities1</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>RHN_Team_Brok</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>RHN Team - Brok Vandersteen</label>
    </listViews>
    <listViews>
        <fullName>RHN_Team_Kubo</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>RHN Team - Mike Kubo</label>
    </listViews>
    <listViews>
        <fullName>RHN_Team_Sweis</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>RHN Team - Will Sweis</label>
    </listViews>
    <listViews>
        <fullName>RHN_Team_Wieser</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>RHN Team - Nate Wieser</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>IntegratedHealtchare</fullName>
        <active>true</active>
        <businessProcess>Integrated Healthcare Sales Process</businessProcess>
        <description>Integrated Healthcare Sales</description>
        <label>Integrated Healthcare</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Membership Sales Process</businessProcess>
        <description>Membership Sales</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <businessProcess>Sponsorship Sales Process</businessProcess>
        <description>Sponsorship</description>
        <label>Sponsorship</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Closed_Won_Required_Fields</fullName>
        <active>true</active>
        <description>Ensures that fields required for fulfillment are filled out prior to the Stage becoming &quot;Closed Won&quot;.</description>
        <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Won&quot;),
RecordType.Name = &quot;Membership&quot;,
Account.RecordType.Name = &quot;Member Outreach&quot;,
OR(
ISNULL(Account.Contact_for_Scheduling__c),
ISNULL(Account.Network__c),
NumberOfProducts__c = 0,
ISNULL(Account.Notes__c),
ISNULL(Account.Phone_for_schedule__c),
ISNULL(Account.IT_Phone_and_Email__c)))</errorConditionFormula>
        <errorMessage>The following fields are required in order to close this opportunity: Contact/Phone/Email for Scheduling, Content Requested, # of Waiting Rooms, Lead Source, and Notes for Onboarding. Furthermore, you must add at least one product.</errorMessage>
    </validationRules>
</CustomObject>